kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: esp-deployment

spec:
  replicas: 3

  selector:
    matchLabels:
      app: esp

  template:
    metadata:
      labels:
        app: esp

    spec:
      containers:
        - name: esp
          image: esp:v1
          ports:
            - containerPort: 5000
