kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: esp-service

spec:
  type: ClusterIP

  selector:
    app: esp

  ports:
  - port: 80
    targetPort: 5000
