kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esp-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: esp.nick.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: esp-service
            port:
              number: 80
